trunk/Archive2/69/91b2b2d1005c07/output
main.cpp: In function 'void show_list(const T&)':
main.cpp:9:27: error: 'endl' was not declared in this scope
     std::cout << value << endl;
                           ^
main.cpp:9:27: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
